added suggested product, recent order
